# cachedb

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/cachedb/: core.py  decorators.py
src/cachedb/cachedb/: __init__.py  schema.py  utils.py
test/: test_core.py
